feat - Day 17 C# ( Added DB connection and migrations for the FirstAPI application )

--- a/26-05-2025/FirstAPI/appsettings.json
+++ b/26-05-2025/FirstAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=myproject;"    
+  },
   "AllowedHosts": "*"
 }
