feat - Day 20 C# ( Bank application completed )

--- a/29-05-2025/BankApplication/appsettings.json
+++ b/29-05-2025/BankApplication/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=bank;"    
+    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=bankDB;"    
   },
   "AllowedHosts": "*"
 }
