fix - removed undeclared context, added format for oauth client creds

--- a/04-06-2025/FirstAPI/appsettings.json
+++ b/04-06-2025/FirstAPI/appsettings.json
@@ -12,5 +12,12 @@
     "JwtTokenKey":"This is a summy key that is used for development. Ensure you replace this"
   },
 
+  "Authentication":{
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+  },
+
   "AllowedHosts": "*"
 }
