--- a/06-06-2025/QuizupAPI/QuizupAPI.csproj
+++ b/06-06-2025/QuizupAPI/QuizupAPI.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
 
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
