feat: QuizupAPI - Add exception handling and request logging middleware.

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -1,35 +1,64 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Enrichers.Environment",
+      "Serilog.Enrichers.Process",
+      "Serilog.Enrichers.Thread"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.AspNetCore": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning"
       }
     },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "/Logs/log-development-.txt",
+          "path": "Logs/quizupapi-.json",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "retainedFileCountLimit": 7
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/quizupapi-errors-.json",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "restrictedToMinimumLevel": "Error",
+          "retainedFileCountLimit": 7
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
     "Properties": {
       "Application": "QuizupAPI",
-      "Environment": "Development"
+      "Environment": "Development",
+      "Version": "1.0.0"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"    
+    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"
   },
   "AllowedHosts": "*"
 }
