feat - QuizupAPI Added CORS, Swagger,  error logging, enhance middleware, and improve API configuration

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -60,5 +60,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  }
 }
