--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -57,6 +57,14 @@
       "Version": "1.0.0"
     }
   },
+  "Jwt": {
+    "Key": "Kj8#mP9$vL2@nX5&hQ7*wR4!tY3^cF6_dB1+eA0",
+    "Issuer": "quizup-api",
+    "Audience": "quizup-clients",
+    "ExpiryInMinutes": 60
+  },
+  "AllowedOrigins": "http://localhost:5500",
+
   "ConnectionStrings": {
     "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"
   },
