refactor: QuizupAPI - Update Program.cs for JWT authentication, enhance getAll() method in repositories

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -57,11 +57,9 @@
       "Version": "1.0.0"
     }
   },
-  "Jwt": {
-    "Key": "Kj8#mP9$vL2@nX5&hQ7*wR4!tY3^cF6_dB1+eA0",
-    "Issuer": "quizup-api",
-    "Audience": "quizup-clients",
-    "ExpiryInMinutes": 60
+
+  "Keys":{
+    "JwtTokenKey":"This is a summy key that is used for development. Ensure you replace this"
   },
   "AllowedOrigins": "http://localhost:5500",
 
