feat: Implement user logout functionality and invalidate refresh token

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -64,7 +64,7 @@
   "AllowedOrigins": "http://localhost:5500",
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"
+    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupDB;"
   },
   "AllowedHosts": "*",
   "Logging": {
