--- a/Quizup-Angular-Application/package.json
+++ b/Quizup-Angular-Application/package.json
@@ -16,6 +16,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
     "@tailwindcss/postcss": "^4.1.10",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
