--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -18,12 +18,6 @@
     },
     "WriteTo": [
       {
-        "Name": "Console",
-        "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      },
-      {
         "Name": "File",
         "Args": {
           "path": "Logs/quizupapi-.json",
@@ -58,13 +52,13 @@
     }
   },
 
-  "Keys":{
-    "JwtTokenKey":"This is a summy key that is used for development. Ensure you replace this"
+  "Keys": {
+    "JwtTokenKey": "This is a summy key that is used for development. Ensure you replace this"
   },
   "AllowedOrigins": "http://localhost:5500",
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=QuizupDB;"
+    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupDB;"
   },
   "AllowedHosts": "*",
   "Logging": {
