Fix issues and improve logging in QuizupAPI

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -16,7 +16,12 @@
         "Microsoft.EntityFrameworkCore": "Warning"
       }
     },
-    "WriteTo": [
+    "WriteTo": [  {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      },
       {
         "Name": "File",
         "Args": {
