--- a/Quizup-Angular-Application/package.json
+++ b/Quizup-Angular-Application/package.json
@@ -14,6 +14,7 @@
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.4",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@ngrx/effects": "^19.2.1",
