feat: Added migration to create classes and subjects tables, and updated relationships with quizzes and students.

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -16,12 +16,7 @@
         "Microsoft.EntityFrameworkCore": "Warning"
       }
     },
-    "WriteTo": [  {
-        "Name": "Console",
-        "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      },
+    "WriteTo": [  
       {
         "Name": "File",
         "Args": {
@@ -63,7 +58,7 @@
   "AllowedOrigins": "http://localhost:5500",
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupDB;"
+    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupDB1;"
   },
   "AllowedHosts": "*",
   "Logging": {
