--- a/Quizup-Angular-Application/package.json
+++ b/Quizup-Angular-Application/package.json
@@ -23,6 +23,8 @@
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.10",
+    "chart.js": "^4.5.0",
+    "ng2-charts": "^8.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
