feat: Enhance unit tests and Dockerfile for RazorPay integration

--- a/04-07-2025/RazorPayIntegration/DotnetAPI/Dockerfile
+++ b/04-07-2025/RazorPayIntegration/DotnetAPI/Dockerfile
@@ -6,10 +6,11 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 COPY ["DotnetAPI.csproj", "./"]
 RUN dotnet restore "./DotnetAPI.csproj"
+
 COPY . .
 
 RUN dotnet tool install --global dotnet-ef 
-ENV PATH="${PATH}:/root/.dotnet/tools"
+RUN /root/.dotnet/tools/dotnet-ef database update 
 
 WORKDIR "/src"
 RUN dotnet build "DotnetAPI.csproj" -c Release -o /app/build
