--- a/Quizup-Angular-Application/package.json
+++ b/Quizup-Angular-Application/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.0.5",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -20,10 +22,12 @@
     "@microsoft/signalr": "^8.0.7",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/store": "^19.2.1",
+    "@primeuix/themes": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.10",
     "chart.js": "^4.5.0",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
+    "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.10",
     "tslib": "^2.3.0",
