feat: Add Serilog sink for Azure Blob Storage to logging configuration

--- a/06-06-2025/QuizupAPI/appsettings.json
+++ b/06-06-2025/QuizupAPI/appsettings.json
@@ -3,6 +3,7 @@
     "Using": [
       "Serilog.Sinks.Console",
       "Serilog.Sinks.File",
+      "Serilog.Sinks.AzureBlobStorage",
       "Serilog.Enrichers.Environment",
       "Serilog.Enrichers.Process",
       "Serilog.Enrichers.Thread"
@@ -36,6 +37,15 @@
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
           "restrictedToMinimumLevel": "Error",
           "retainedFileCountLimit": 7
+        }
+      },{
+        "Name": "AzureBlobStorage",
+        "Args": {
+          "connectionString": "",
+          "containerName": "container-divyakrishnan",
+          "blobName": "log.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Information"
         }
       }
     ],
