--- a/Quizup-Dotnet-Backend/QuizupAPI/appsettings.json
+++ b/Quizup-Dotnet-Backend/QuizupAPI/appsettings.json
@@ -38,15 +38,6 @@
           "restrictedToMinimumLevel": "Error",
           "retainedFileCountLimit": 7
         }
-      },{
-        "Name": "AzureBlobStorage",
-        "Args": {
-          "connectionString": "",
-          "containerName": "container-divyakrishnan",
-          "blobName": "log.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Information"
-        }
       }
     ],
     "Enrich": [
@@ -68,7 +59,7 @@
   "AllowedOrigins": "http://localhost:5500",
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupDB1;"
+    "DefaultConnection": "User ID=postgres;Password=krish74;Host=localhost;Port=5432;Database=QuizupNewDB;"
   },
   "AllowedHosts": "*",
   "Logging": {
