feat: Migrated only Category management to dotnet core

--- a/MigrationProject/DotnetAPI/appsettings.json
+++ b/MigrationProject/DotnetAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=krish;Password=krish@74;Host=localhost;Port=5432;Database=migration_project;"
+  },
+  "Keys": {
+    "JwtTokenKey": "This is a summy key that is used for development. Ensure you replace this"
+  },
+
   "AllowedHosts": "*"
 }
